# chess-ai

./: .gitignore  CMakeLists.txt  Makefile  STYLE.md
src/: chess.hpp  main.cpp
src/chess/: BitBoard.cpp  Board.cpp  Board.hpp  Check.cpp  ChessBoard.cpp  GetMoves.cpp  Info.cpp  Log.cpp  Moves.cpp  Player.cpp  Terminal.cpp  test.cpp
src/include/: BitBoard.hpp  Board.hpp  Check.hpp  ChessBoard.hpp  Info.hpp  Log.hpp  Macros.hpp  Moves.hpp  Terminal.hpp  chess.hpp  definitions.hpp
